--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "mitt": "^3.0.1",
         "swiper": "^11.0.6",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.2.5"
