--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "laravel-vite-plugin": "^1.0.0",
         "sass": "^1.56.1",
         "vite": "^5.0.0",
-        "vue": "^3.2.37"
+        "vue": "^3.4.20"
     },
     "dependencies": {
         "mitt": "^3.0.1",
         "swiper": "^11.0.6",
         "vue-loader": "^17.3.1",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.2.5",
+        "vue2-google-maps": "^0.10.7",
+        "vue3-google-map": "^0.19.0"
     }
 }
