--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pizza-pitso
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -43,13 +43,14 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID=1769198
+PUSHER_APP_KEY=519528ab6dadee01d2ef
+PUSHER_APP_SECRET=1f3831614be7fa71927e
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_CLUSTER=ap2
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
