--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pizzrgnw_pizzapitsa-main-db
-DB_USERNAME=pizzrgnw_pizzapitsa-haider
-DB_PASSWORD=pizzrgnw_pizzapitsa
+DB_DATABASE=pizza-pitso
+DB_USERNAME=root
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
