--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "mitt": "^3.0.1",
         "select2": "^4.1.0-rc.0",
         "swiper": "^11.0.6",
+        "vue-client-recaptcha": "^1.1.5",
         "vue-loader": "^17.3.1",
         "vue-multiselect": "^3.0.0",
         "vue-router": "^4.2.5",
