--- a/.env
+++ b/.env
@@ -29,13 +29,22 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=465
+# MAIL_USERNAME=shawonbgi@gmail.com
+# MAIL_PASSWORD=cxiyenmpkovmduqr
+# MAIL_ENCRYPTION=shawonbgi@gmail.com
+# MAIL_FROM_ADDRESS="shawonbgi@gmail.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=shawonbgi@gmail.com
-MAIL_PASSWORD=cxiyenmpkovmduqr
-MAIL_ENCRYPTION=shawonbgi@gmail.com
-MAIL_FROM_ADDRESS="shawonbgi@gmail.com"
+MAIL_USERNAME=order.pizzapitsa@gmail.com
+MAIL_PASSWORD=otrinvkeagmlgmnh
+MAIL_ENCRYPTION=order.pizzapitsa@gmail.com
+MAIL_FROM_ADDRESS="order.pizzapitsa@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
